# revector

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
examples/anchor_flag/: CMakeLists.txt  main.cpp
examples/android/: .gitignore
examples/android/app/: build.gradle
examples/android/app/src/main/: AndroidManifest.xml
examples/android/app/src/main/cpp/: AndroidMain.cpp  CMakeLists.txt  vulkan_wrapper.cpp
examples/android/app/src/main/java/graphics/revector/demo/: MainActivity.java
examples/android/app/src/main/res/values/: strings.xml
examples/button/: CMakeLists.txt  main.cpp
examples/collapse_containers/: CMakeLists.txt  main.cpp
examples/container_layout/: CMakeLists.txt  main.cpp
examples/file_selection/: CMakeLists.txt  main.cpp
examples/i18n/: CMakeLists.txt  main.cpp
examples/label_alignment/: CMakeLists.txt  main.cpp
examples/multiple_window/: CMakeLists.txt  main.cpp
examples/popup_menu/: CMakeLists.txt  main.cpp
examples/progress_bar/: CMakeLists.txt  main.cpp
examples/scrolling/: CMakeLists.txt  main.cpp
examples/slider/: CMakeLists.txt  main.cpp
examples/split_container/: CMakeLists.txt  main.cpp
examples/tab/: CMakeLists.txt  main.cpp
examples/texture_rect/: CMakeLists.txt  main.cpp
examples/tree/: CMakeLists.txt  main.cpp
src/: app.cpp  app.h
src/android/: vulkan_wrapper.cpp
src/common/: any_callable.h  geometry.h  utils.h
src/nodes/: file_dialog.cpp  file_dialog.h  node.cpp  node.h  proxy_window.cpp  proxy_window.h  scene_tree.cpp  scene_tree.h  sub_window.cpp  sub_window.h  timer.cpp  timer.h
src/nodes/ui/: button.cpp  button.h  check_button.cpp  label.cpp  label.h  menu_button.cpp  node_ui.cpp  node_ui.h  panel.cpp  panel.h  popup_menu.cpp  popup_menu.h  progress_bar.cpp  progress_bar.h  radio_button.cpp  slider.cpp  slider.h  spin_box.cpp  spin_box.h  text_edit.cpp  text_edit.h  texture_rect.cpp  texture_rect.h  tree.cpp  tree.h
src/nodes/ui/button/: button.cpp  button.h  check_button.cpp  check_button.h  menu_button.cpp  menu_button.h  radio_button.cpp  radio_button.h
src/nodes/ui/container/: box_container.cpp  box_container.h  collapse_container.cpp  collapse_container.h  container.cpp  container.h  grid_container.cpp  grid_container.h  margin_container.cpp  margin_container.h  scroll_container.cpp  scroll_container.h  split_container.cpp  split_container.h  tab_container.cpp  tab_container.h
src/render/: base.h  blit.cpp  blit.h
src/resources/: default_resource.cpp  default_resource.h  font.cpp  font.h  image.cpp  image.h  opensans_regular_ttf.h  raster_image.cpp  raster_image.h  render_image.cpp  render_image.h  resource.cpp  resource.h  resource.mm  style_box.h  theme.cpp  theme.h  vector_image.cpp  vector_image.h
src/servers/: engine.cpp  engine.h  input_server.cpp  input_server.h  render_server.h  text_server.cpp  text_server.h  translation_server.cpp  translation_server.h  vector_server.cpp  vector_server.h
